Connection to postgreSQL

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Todo;Trusted_Connection=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TodoList;Username=postgres;Password=3348;"
   }
 }
